export const snapshot = {};

snapshot[`parseJson > parses array-0.json 1`] = `
{
  elementType: {
    kind: "primitive",
    name: "number",
  },
  kind: "array",
}
`;

snapshot[`parseJson > parses array-1.json 1`] = `
{
  elementType: {
    fields: Map(2) {
      "key1" => {
        kind: "primitive",
        name: "string",
      },
      "key2" => {
        kind: "primitive",
        name: "string",
      },
    },
    kind: "struct",
  },
  kind: "array",
}
`;

snapshot[`parseJson > parses array-2.json 1`] = `
{
  elementType: {
    fields: Map(3) {
      "key1" => {
        kind: "primitive",
        name: "string",
      },
      "key2" => {
        kind: "primitive",
        name: "string",
      },
      "optional" => {
        kind: "option",
        valueType: {
          kind: "primitive",
          name: "string",
        },
      },
    },
    kind: "struct",
  },
  kind: "array",
}
`;

snapshot[`parseJson > parses array-3.json 1`] = `
{
  elementType: {
    kind: "map",
    valueType: {
      kind: "primitive",
      name: "string",
    },
  },
  kind: "array",
}
`;

snapshot[`parseJson > parses array-4.json 1`] = `
{
  elementType: {
    kind: "map",
    valueType: {
      kind: "union",
      variants: Map(2) {
        "primitive" => {
          kind: "union",
          variants: Map(2) {
            "number" => {
              kind: "primitive",
              name: "number",
            },
            "string" => {
              kind: "primitive",
              name: "string",
            },
          },
        },
        "struct" => {
          fields: Map(1) {
            "key4" => {
              kind: "primitive",
              name: "string",
            },
          },
          kind: "struct",
        },
      },
    },
  },
  kind: "array",
}
`;

snapshot[`parseJson > parses boolean-false.json 1`] = `
{
  kind: "primitive",
  name: "boolean",
}
`;

snapshot[`parseJson > parses boolean-true.json 1`] = `
{
  kind: "primitive",
  name: "boolean",
}
`;

snapshot[`parseJson > parses map-0.json 1`] = `
{
  kind: "map",
  valueType: {
    kind: "primitive",
    name: "number",
  },
}
`;

snapshot[`parseJson > parses map-1.json 1`] = `
{
  kind: "map",
  valueType: {
    kind: "primitive",
    name: "number",
  },
}
`;

snapshot[`parseJson > parses map-2.json 1`] = `
{
  kind: "map",
  valueType: {
    kind: "primitive",
    name: "number",
  },
}
`;

snapshot[`parseJson > parses null.json 1`] = `
{
  kind: "null",
}
`;

snapshot[`parseJson > parses number-negative.json 1`] = `
{
  kind: "primitive",
  name: "number",
}
`;

snapshot[`parseJson > parses number-positive.json 1`] = `
{
  kind: "primitive",
  name: "number",
}
`;

snapshot[`parseJson > parses number-zero.json 1`] = `
{
  kind: "primitive",
  name: "number",
}
`;

snapshot[`parseJson > parses object-0.json 1`] = `
{
  fields: Map(1) {
    "key" => {
      kind: "primitive",
      name: "string",
    },
  },
  kind: "struct",
}
`;

snapshot[`parseJson > parses object-1.json 1`] = `
{
  fields: Map(1) {
    "key" => {
      kind: "primitive",
      name: "number",
    },
  },
  kind: "struct",
}
`;

snapshot[`parseJson > parses object-2.json 1`] = `
{
  fields: Map(1) {
    "key" => {
      kind: "primitive",
      name: "boolean",
    },
  },
  kind: "struct",
}
`;

snapshot[`parseJson > parses object-3.json 1`] = `
{
  fields: Map(1) {
    "key" => {
      elementType: {
        kind: "primitive",
        name: "string",
      },
      kind: "array",
    },
  },
  kind: "struct",
}
`;

snapshot[`parseJson > parses object-4.json 1`] = `
{
  fields: Map(1) {
    "key" => {
      fields: Map(1) {
        "key" => {
          kind: "primitive",
          name: "string",
        },
      },
      kind: "struct",
    },
  },
  kind: "struct",
}
`;

snapshot[`parseJson > parses object-5.json 1`] = `
{
  fields: Map(1) {
    "key" => {
      kind: "null",
    },
  },
  kind: "struct",
}
`;

snapshot[`parseJson > parses object-6.json 1`] = `
{
  fields: Map(1) {
    "key" => {
      elementType: {
        fields: Map(1) {
          "key" => {
            kind: "primitive",
            name: "string",
          },
        },
        kind: "struct",
      },
      kind: "array",
    },
  },
  kind: "struct",
}
`;

snapshot[`parseJson > parses object-7.json 1`] = `
{
  fields: Map(1) {
    "key" => {
      elementType: {
        kind: "union",
        variants: Map(2) {
          "boolean" => {
            kind: "primitive",
            name: "boolean",
          },
          "string" => {
            kind: "primitive",
            name: "string",
          },
        },
      },
      kind: "array",
    },
  },
  kind: "struct",
}
`;

snapshot[`parseJson > parses object-8.json 1`] = `
{
  fields: Map(8) {
    "key1" => {
      kind: "primitive",
      name: "boolean",
    },
    "key2" => {
      kind: "primitive",
      name: "boolean",
    },
    "key3" => {
      kind: "null",
    },
    "key4" => {
      kind: "primitive",
      name: "number",
    },
    "key5" => {
      kind: "primitive",
      name: "number",
    },
    "key6" => {
      kind: "primitive",
      name: "string",
    },
    "key7" => {
      elementType: {
        kind: "primitive",
        name: "number",
      },
      kind: "array",
    },
    "key8" => {
      fields: Map(1) {
        "key1" => {
          kind: "primitive",
          name: "string",
        },
      },
      kind: "struct",
    },
  },
  kind: "struct",
}
`;

snapshot[`parseJson > parses regression-0-option-option.json 1`] = `
{
  fields: Map(1) {
    "multipart" => {
      elementType: {
        fields: Map(1) {
          "AND" => {
            elementType: {
              fields: Map(2) {
                "facing" => {
                  kind: "option",
                  valueType: {
                    kind: "primitive",
                    name: "string",
                  },
                },
                "slot_0_occupied" => {
                  kind: "option",
                  valueType: {
                    kind: "primitive",
                    name: "string",
                  },
                },
              },
              kind: "struct",
            },
            kind: "array",
          },
        },
        kind: "struct",
      },
      kind: "array",
    },
  },
  kind: "struct",
}
`;

snapshot[`emitTypes > emit array-0.json 1`] = `
"pub type Root = Vec<f64>;
"
`;

snapshot[`emitTypes > emit array-1.json 1`] = `
"pub struct RootElement0 {
  key1: String,
  key2: String,
}
pub type Root = Vec<RootElement0>;
"
`;

snapshot[`emitTypes > emit array-2.json 1`] = `
"pub struct RootElement0 {
  key1: String,
  key2: String,
  optional: Option<String>,
}
pub type Root = Vec<RootElement0>;
"
`;

snapshot[`emitTypes > emit array-3.json 1`] = `
"pub type Root = Vec<std::collections::HashMap<String, String>>;
"
`;

snapshot[`emitTypes > emit array-4.json 1`] = `
"pub enum Primitive2 {
  Number(f64),
  String(String),
}
pub struct Struct5 {
  key4: String,
}
pub enum RootElementEntry1 {
  Primitive(Primitive2),
  Struct(Struct5),
}
pub type Root = Vec<std::collections::HashMap<String, RootElementEntry1>>;
"
`;

snapshot[`emitTypes > emit boolean-false.json 1`] = `
"pub type Root = bool;
"
`;

snapshot[`emitTypes > emit boolean-true.json 1`] = `
"pub type Root = bool;
"
`;

snapshot[`emitTypes > emit map-0.json 1`] = `
"pub type Root = std::collections::HashMap<String, f64>;
"
`;

snapshot[`emitTypes > emit map-1.json 1`] = `
"pub type Root = std::collections::HashMap<String, f64>;
"
`;

snapshot[`emitTypes > emit map-2.json 1`] = `
"pub type Root = std::collections::HashMap<String, f64>;
"
`;

snapshot[`emitTypes > emit null.json 1`] = `
"pub type Root = ();
"
`;

snapshot[`emitTypes > emit number-negative.json 1`] = `
"pub type Root = f64;
"
`;

snapshot[`emitTypes > emit number-positive.json 1`] = `
"pub type Root = f64;
"
`;

snapshot[`emitTypes > emit number-zero.json 1`] = `
"pub type Root = f64;
"
`;

snapshot[`emitTypes > emit object-0.json 1`] = `
"pub struct Root {
  key: String,
}
"
`;

snapshot[`emitTypes > emit object-1.json 1`] = `
"pub struct Root {
  key: f64,
}
"
`;

snapshot[`emitTypes > emit object-2.json 1`] = `
"pub struct Root {
  key: bool,
}
"
`;

snapshot[`emitTypes > emit object-3.json 1`] = `
"pub struct Root {
  key: Vec<String>,
}
"
`;

snapshot[`emitTypes > emit object-4.json 1`] = `
"pub struct Key0 {
  key: String,
}
pub struct Root {
  key: Key0,
}
"
`;

snapshot[`emitTypes > emit object-5.json 1`] = `
"pub struct Root {
  key: (),
}
"
`;

snapshot[`emitTypes > emit object-6.json 1`] = `
"pub struct KeyElement1 {
  key: String,
}
pub struct Root {
  key: Vec<KeyElement1>,
}
"
`;

snapshot[`emitTypes > emit object-7.json 1`] = `
"pub enum KeyElement1 {
  Boolean(bool),
  String(String),
}
pub struct Root {
  key: Vec<KeyElement1>,
}
"
`;

snapshot[`emitTypes > emit object-8.json 1`] = `
"pub struct Key8 {
  key1: String,
}
pub struct Root {
  key1: bool,
  key2: bool,
  key3: (),
  key4: f64,
  key5: f64,
  key6: String,
  key7: Vec<f64>,
  key8: Key8,
}
"
`;

snapshot[`emitTypes > parses regression-0-option-option.json 1`] = `
"pub struct ANDElement3 {
  facing: Option<String>,
  slot_0_occupied: Option<String>,
}
pub struct MultipartElement1 {
  AND: Vec<ANDElement3>,
}
pub struct Root {
  multipart: Vec<MultipartElement1>,
}
"
`;

snapshot[`Parse Multiple Files > datapack/blockstates 1`] = `
{
  fields: Map(2) {
    "multipart" => {
      kind: "option",
      valueType: {
        elementType: {
          fields: Map(2) {
            "apply" => {
              kind: "union",
              variants: Map(2) {
                "array" => {
                  elementType: {
                    fields: Map(5) {
                      "model" => {
                        kind: "primitive",
                        name: "string",
                      },
                      "uvlock" => {
                        kind: "option",
                        valueType: {
                          kind: "primitive",
                          name: "boolean",
                        },
                      },
                      "weight" => {
                        kind: "option",
                        valueType: {
                          kind: "primitive",
                          name: "number",
                        },
                      },
                      "x" => {
                        kind: "option",
                        valueType: {
                          kind: "primitive",
                          name: "number",
                        },
                      },
                      "y" => {
                        kind: "option",
                        valueType: {
                          kind: "primitive",
                          name: "number",
                        },
                      },
                    },
                    kind: "struct",
                  },
                  kind: "array",
                },
                "struct" => {
                  fields: Map(4) {
                    "model" => {
                      kind: "primitive",
                      name: "string",
                    },
                    "uvlock" => {
                      kind: "option",
                      valueType: {
                        kind: "primitive",
                        name: "boolean",
                      },
                    },
                    "x" => {
                      kind: "option",
                      valueType: {
                        kind: "primitive",
                        name: "number",
                      },
                    },
                    "y" => {
                      kind: "option",
                      valueType: {
                        kind: "primitive",
                        name: "number",
                      },
                    },
                  },
                  kind: "struct",
                },
              },
            },
            "when" => {
              kind: "option",
              valueType: {
                fields: Map(16) {
                  "AND" => {
                    kind: "option",
                    valueType: {
                      elementType: {
                        fields: Map(7) {
                          "facing" => {
                            kind: "option",
                            valueType: {
                              kind: "primitive",
                              name: "string",
                            },
                          },
                          "slot_0_occupied" => {
                            kind: "option",
                            valueType: {
                              kind: "primitive",
                              name: "string",
                            },
                          },
                          "slot_1_occupied" => {
                            kind: "option",
                            valueType: {
                              kind: "primitive",
                              name: "string",
                            },
                          },
                          "slot_2_occupied" => {
                            kind: "option",
                            valueType: {
                              kind: "primitive",
                              name: "string",
                            },
                          },
                          "slot_3_occupied" => {
                            kind: "option",
                            valueType: {
                              kind: "primitive",
                              name: "string",
                            },
                          },
                          "slot_4_occupied" => {
                            kind: "option",
                            valueType: {
                              kind: "primitive",
                              name: "string",
                            },
                          },
                          "slot_5_occupied" => {
                            kind: "option",
                            valueType: {
                              kind: "primitive",
                              name: "string",
                            },
                          },
                        },
                        kind: "struct",
                      },
                      kind: "array",
                    },
                  },
                  "OR" => {
                    kind: "option",
                    valueType: {
                      elementType: {
                        fields: Map(5) {
                          "east" => {
                            kind: "option",
                            valueType: {
                              kind: "primitive",
                              name: "string",
                            },
                          },
                          "north" => {
                            kind: "option",
                            valueType: {
                              kind: "primitive",
                              name: "string",
                            },
                          },
                          "south" => {
                            kind: "option",
                            valueType: {
                              kind: "primitive",
                              name: "string",
                            },
                          },
                          "up" => {
                            kind: "option",
                            valueType: {
                              kind: "primitive",
                              name: "string",
                            },
                          },
                          "west" => {
                            kind: "option",
                            valueType: {
                              kind: "primitive",
                              name: "string",
                            },
                          },
                        },
                        kind: "struct",
                      },
                      kind: "array",
                    },
                  },
                  "age" => {
                    kind: "option",
                    valueType: {
                      kind: "primitive",
                      name: "string",
                    },
                  },
                  "down" => {
                    kind: "option",
                    valueType: {
                      kind: "primitive",
                      name: "string",
                    },
                  },
                  "east" => {
                    kind: "option",
                    valueType: {
                      kind: "primitive",
                      name: "string",
                    },
                  },
                  "facing" => {
                    kind: "option",
                    valueType: {
                      kind: "primitive",
                      name: "string",
                    },
                  },
                  "flower_amount" => {
                    kind: "option",
                    valueType: {
                      kind: "primitive",
                      name: "string",
                    },
                  },
                  "has_bottle_0" => {
                    kind: "option",
                    valueType: {
                      kind: "primitive",
                      name: "string",
                    },
                  },
                  "has_bottle_1" => {
                    kind: "option",
                    valueType: {
                      kind: "primitive",
                      name: "string",
                    },
                  },
                  "has_bottle_2" => {
                    kind: "option",
                    valueType: {
                      kind: "primitive",
                      name: "string",
                    },
                  },
                  "leaves" => {
                    kind: "option",
                    valueType: {
                      kind: "primitive",
                      name: "string",
                    },
                  },
                  "level" => {
                    kind: "option",
                    valueType: {
                      kind: "primitive",
                      name: "string",
                    },
                  },
                  "north" => {
                    kind: "option",
                    valueType: {
                      kind: "primitive",
                      name: "string",
                    },
                  },
                  "south" => {
                    kind: "option",
                    valueType: {
                      kind: "primitive",
                      name: "string",
                    },
                  },
                  "up" => {
                    kind: "option",
                    valueType: {
                      kind: "primitive",
                      name: "string",
                    },
                  },
                  "west" => {
                    kind: "option",
                    valueType: {
                      kind: "primitive",
                      name: "string",
                    },
                  },
                },
                kind: "struct",
              },
            },
          },
          kind: "struct",
        },
        kind: "array",
      },
    },
    "variants" => {
      kind: "option",
      valueType: {
        kind: "map",
        valueType: {
          kind: "union",
          variants: Map(2) {
            "array" => {
              elementType: {
                fields: Map(3) {
                  "model" => {
                    kind: "primitive",
                    name: "string",
                  },
                  "x" => {
                    kind: "option",
                    valueType: {
                      kind: "primitive",
                      name: "number",
                    },
                  },
                  "y" => {
                    kind: "option",
                    valueType: {
                      kind: "primitive",
                      name: "number",
                    },
                  },
                },
                kind: "struct",
              },
              kind: "array",
            },
            "struct" => {
              fields: Map(4) {
                "model" => {
                  kind: "primitive",
                  name: "string",
                },
                "uvlock" => {
                  kind: "option",
                  valueType: {
                    kind: "primitive",
                    name: "boolean",
                  },
                },
                "x" => {
                  kind: "option",
                  valueType: {
                    kind: "primitive",
                    name: "number",
                  },
                },
                "y" => {
                  kind: "option",
                  valueType: {
                    kind: "primitive",
                    name: "number",
                  },
                },
              },
              kind: "struct",
            },
          },
        },
      },
    },
  },
  kind: "struct",
}
`;

snapshot[`Parse Multiple Files > datapack/models/block 1`] = `
{
  fields: Map(7) {
    "ambientocclusion" => {
      kind: "option",
      valueType: {
        kind: "primitive",
        name: "boolean",
      },
    },
    "display" => {
      kind: "option",
      valueType: {
        fields: Map(8) {
          "firstperson_lefthand" => {
            kind: "option",
            valueType: {
              fields: Map(3) {
                "rotation" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
                "scale" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
                "translation" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
              },
              kind: "struct",
            },
          },
          "firstperson_righthand" => {
            kind: "option",
            valueType: {
              fields: Map(3) {
                "rotation" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
                "scale" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
                "translation" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
              },
              kind: "struct",
            },
          },
          "fixed" => {
            kind: "option",
            valueType: {
              fields: Map(3) {
                "rotation" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
                "scale" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
                "translation" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
              },
              kind: "struct",
            },
          },
          "ground" => {
            kind: "option",
            valueType: {
              fields: Map(3) {
                "rotation" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
                "scale" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
                "translation" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
              },
              kind: "struct",
            },
          },
          "gui" => {
            kind: "option",
            valueType: {
              fields: Map(3) {
                "rotation" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
                "scale" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
                "translation" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
              },
              kind: "struct",
            },
          },
          "head" => {
            kind: "option",
            valueType: {
              fields: Map(3) {
                "rotation" => {
                  kind: "option",
                  valueType: {
                    elementType: {
                      kind: "primitive",
                      name: "number",
                    },
                    kind: "array",
                  },
                },
                "scale" => {
                  kind: "option",
                  valueType: {
                    elementType: {
                      kind: "primitive",
                      name: "number",
                    },
                    kind: "array",
                  },
                },
                "translation" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
              },
              kind: "struct",
            },
          },
          "thirdperson_lefthand" => {
            kind: "option",
            valueType: {
              fields: Map(3) {
                "rotation" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
                "scale" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
                "translation" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
              },
              kind: "struct",
            },
          },
          "thirdperson_righthand" => {
            kind: "option",
            valueType: {
              fields: Map(3) {
                "rotation" => {
                  kind: "option",
                  valueType: {
                    elementType: {
                      kind: "primitive",
                      name: "number",
                    },
                    kind: "array",
                  },
                },
                "scale" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
                "translation" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
              },
              kind: "struct",
            },
          },
        },
        kind: "struct",
      },
    },
    "elements" => {
      kind: "option",
      valueType: {
        elementType: {
          fields: Map(7) {
            "__comment" => {
              kind: "option",
              valueType: {
                kind: "primitive",
                name: "string",
              },
            },
            "faces" => {
              fields: Map(6) {
                "down" => {
                  kind: "option",
                  valueType: {
                    fields: Map(5) {
                      "cullface" => {
                        kind: "option",
                        valueType: {
                          kind: "primitive",
                          name: "string",
                        },
                      },
                      "rotation" => {
                        kind: "option",
                        valueType: {
                          kind: "primitive",
                          name: "number",
                        },
                      },
                      "texture" => {
                        kind: "primitive",
                        name: "string",
                      },
                      "tintindex" => {
                        kind: "option",
                        valueType: {
                          kind: "primitive",
                          name: "number",
                        },
                      },
                      "uv" => {
                        kind: "option",
                        valueType: {
                          elementType: {
                            kind: "primitive",
                            name: "number",
                          },
                          kind: "array",
                        },
                      },
                    },
                    kind: "struct",
                  },
                },
                "east" => {
                  kind: "option",
                  valueType: {
                    fields: Map(5) {
                      "cullface" => {
                        kind: "option",
                        valueType: {
                          kind: "primitive",
                          name: "string",
                        },
                      },
                      "rotation" => {
                        kind: "option",
                        valueType: {
                          kind: "primitive",
                          name: "number",
                        },
                      },
                      "texture" => {
                        kind: "primitive",
                        name: "string",
                      },
                      "tintindex" => {
                        kind: "option",
                        valueType: {
                          kind: "primitive",
                          name: "number",
                        },
                      },
                      "uv" => {
                        kind: "option",
                        valueType: {
                          elementType: {
                            kind: "primitive",
                            name: "number",
                          },
                          kind: "array",
                        },
                      },
                    },
                    kind: "struct",
                  },
                },
                "north" => {
                  kind: "option",
                  valueType: {
                    fields: Map(5) {
                      "cullface" => {
                        kind: "option",
                        valueType: {
                          kind: "primitive",
                          name: "string",
                        },
                      },
                      "rotation" => {
                        kind: "option",
                        valueType: {
                          kind: "primitive",
                          name: "number",
                        },
                      },
                      "texture" => {
                        kind: "primitive",
                        name: "string",
                      },
                      "tintindex" => {
                        kind: "option",
                        valueType: {
                          kind: "primitive",
                          name: "number",
                        },
                      },
                      "uv" => {
                        kind: "option",
                        valueType: {
                          elementType: {
                            kind: "primitive",
                            name: "number",
                          },
                          kind: "array",
                        },
                      },
                    },
                    kind: "struct",
                  },
                },
                "south" => {
                  kind: "option",
                  valueType: {
                    fields: Map(5) {
                      "cullface" => {
                        kind: "option",
                        valueType: {
                          kind: "primitive",
                          name: "string",
                        },
                      },
                      "rotation" => {
                        kind: "option",
                        valueType: {
                          kind: "primitive",
                          name: "number",
                        },
                      },
                      "texture" => {
                        kind: "primitive",
                        name: "string",
                      },
                      "tintindex" => {
                        kind: "option",
                        valueType: {
                          kind: "primitive",
                          name: "number",
                        },
                      },
                      "uv" => {
                        kind: "option",
                        valueType: {
                          elementType: {
                            kind: "primitive",
                            name: "number",
                          },
                          kind: "array",
                        },
                      },
                    },
                    kind: "struct",
                  },
                },
                "up" => {
                  kind: "option",
                  valueType: {
                    fields: Map(5) {
                      "cullface" => {
                        kind: "option",
                        valueType: {
                          kind: "primitive",
                          name: "string",
                        },
                      },
                      "rotation" => {
                        kind: "option",
                        valueType: {
                          kind: "primitive",
                          name: "number",
                        },
                      },
                      "texture" => {
                        kind: "primitive",
                        name: "string",
                      },
                      "tintindex" => {
                        kind: "option",
                        valueType: {
                          kind: "primitive",
                          name: "number",
                        },
                      },
                      "uv" => {
                        kind: "option",
                        valueType: {
                          elementType: {
                            kind: "primitive",
                            name: "number",
                          },
                          kind: "array",
                        },
                      },
                    },
                    kind: "struct",
                  },
                },
                "west" => {
                  kind: "option",
                  valueType: {
                    fields: Map(5) {
                      "cullface" => {
                        kind: "option",
                        valueType: {
                          kind: "primitive",
                          name: "string",
                        },
                      },
                      "rotation" => {
                        kind: "option",
                        valueType: {
                          kind: "primitive",
                          name: "number",
                        },
                      },
                      "texture" => {
                        kind: "primitive",
                        name: "string",
                      },
                      "tintindex" => {
                        kind: "option",
                        valueType: {
                          kind: "primitive",
                          name: "number",
                        },
                      },
                      "uv" => {
                        kind: "option",
                        valueType: {
                          elementType: {
                            kind: "primitive",
                            name: "number",
                          },
                          kind: "array",
                        },
                      },
                    },
                    kind: "struct",
                  },
                },
              },
              kind: "struct",
            },
            "from" => {
              elementType: {
                kind: "primitive",
                name: "number",
              },
              kind: "array",
            },
            "name" => {
              kind: "option",
              valueType: {
                kind: "primitive",
                name: "string",
              },
            },
            "rotation" => {
              kind: "option",
              valueType: {
                fields: Map(4) {
                  "angle" => {
                    kind: "primitive",
                    name: "number",
                  },
                  "axis" => {
                    kind: "primitive",
                    name: "string",
                  },
                  "origin" => {
                    elementType: {
                      kind: "primitive",
                      name: "number",
                    },
                    kind: "array",
                  },
                  "rescale" => {
                    kind: "option",
                    valueType: {
                      kind: "primitive",
                      name: "boolean",
                    },
                  },
                },
                kind: "struct",
              },
            },
            "shade" => {
              kind: "option",
              valueType: {
                kind: "primitive",
                name: "boolean",
              },
            },
            "to" => {
              elementType: {
                kind: "primitive",
                name: "number",
              },
              kind: "array",
            },
          },
          kind: "struct",
        },
        kind: "array",
      },
    },
    "groups" => {
      kind: "option",
      valueType: {
        elementType: {
          fields: Map(4) {
            "children" => {
              elementType: {
                kind: "primitive",
                name: "number",
              },
              kind: "array",
            },
            "color" => {
              kind: "primitive",
              name: "number",
            },
            "name" => {
              kind: "primitive",
              name: "string",
            },
            "origin" => {
              elementType: {
                kind: "primitive",
                name: "number",
              },
              kind: "array",
            },
          },
          kind: "struct",
        },
        kind: "array",
      },
    },
    "gui_light" => {
      kind: "option",
      valueType: {
        kind: "primitive",
        name: "string",
      },
    },
    "parent" => {
      kind: "option",
      valueType: {
        kind: "primitive",
        name: "string",
      },
    },
    "textures" => {
      kind: "option",
      valueType: {
        fields: Map(92) {
          "all" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "amethyst" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "back" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "bamboo" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "bar" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "bars" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "base" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "beacon" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "body" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "bottom" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "cactus" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "cactus_top" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "calibrated_side" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "candle" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "cocoa" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "content" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "crop" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "cross" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "dirt" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "down" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "east" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "edge" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "end" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "end_rod" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "eye" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "fan" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "fire" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "flower" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "flowerbed" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "flowerpot" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "front" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "glass" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "glow_lichen" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "hook" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "inner_top" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "inside" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "lantern" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "leaf" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "leg" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "lever" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "line" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "lit" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "lit_log" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "lock" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "log" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "north" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "obsidian" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "overlay" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "pane" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "particle" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "pattern" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "pitcher_bottom" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "pitcher_side" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "pitcher_top" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "pivot" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "plant" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "platform" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "portal" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "post" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "propagule" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "rail" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "round" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "sapling" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "saw" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "sculk_vein" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "side" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "sides" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "slab" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "south" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "stage_1" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "stage_2" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "stage_3_bottom" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "stage_3_top" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "stage_4_bottom" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "stage_4_top" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "stand" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "stem" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "tendrils" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "texture" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "tip" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "top" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "torch" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "tripwire" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "unlit" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "unsticky" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "up" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "upperstem" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "vine" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "wall" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "west" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "wood" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "wool" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
        },
        kind: "struct",
      },
    },
  },
  kind: "struct",
}
`;

snapshot[`Parse Multiple Files > datapack/models/item 1`] = `
{
  fields: Map(6) {
    "display" => {
      kind: "option",
      valueType: {
        fields: Map(8) {
          "firstperson_lefthand" => {
            kind: "option",
            valueType: {
              fields: Map(3) {
                "rotation" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
                "scale" => {
                  kind: "option",
                  valueType: {
                    elementType: {
                      kind: "primitive",
                      name: "number",
                    },
                    kind: "array",
                  },
                },
                "translation" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
              },
              kind: "struct",
            },
          },
          "firstperson_righthand" => {
            kind: "option",
            valueType: {
              fields: Map(3) {
                "rotation" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
                "scale" => {
                  kind: "option",
                  valueType: {
                    elementType: {
                      kind: "primitive",
                      name: "number",
                    },
                    kind: "array",
                  },
                },
                "translation" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
              },
              kind: "struct",
            },
          },
          "fixed" => {
            kind: "option",
            valueType: {
              fields: Map(3) {
                "rotation" => {
                  kind: "option",
                  valueType: {
                    elementType: {
                      kind: "primitive",
                      name: "number",
                    },
                    kind: "array",
                  },
                },
                "scale" => {
                  kind: "option",
                  valueType: {
                    elementType: {
                      kind: "primitive",
                      name: "number",
                    },
                    kind: "array",
                  },
                },
                "translation" => {
                  kind: "option",
                  valueType: {
                    elementType: {
                      kind: "primitive",
                      name: "number",
                    },
                    kind: "array",
                  },
                },
              },
              kind: "struct",
            },
          },
          "ground" => {
            kind: "option",
            valueType: {
              fields: Map(3) {
                "rotation" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
                "scale" => {
                  kind: "option",
                  valueType: {
                    elementType: {
                      kind: "primitive",
                      name: "number",
                    },
                    kind: "array",
                  },
                },
                "translation" => {
                  kind: "option",
                  valueType: {
                    elementType: {
                      kind: "primitive",
                      name: "number",
                    },
                    kind: "array",
                  },
                },
              },
              kind: "struct",
            },
          },
          "gui" => {
            kind: "option",
            valueType: {
              fields: Map(3) {
                "rotation" => {
                  kind: "option",
                  valueType: {
                    elementType: {
                      kind: "primitive",
                      name: "number",
                    },
                    kind: "array",
                  },
                },
                "scale" => {
                  kind: "option",
                  valueType: {
                    elementType: {
                      kind: "primitive",
                      name: "number",
                    },
                    kind: "array",
                  },
                },
                "translation" => {
                  kind: "option",
                  valueType: {
                    elementType: {
                      kind: "primitive",
                      name: "number",
                    },
                    kind: "array",
                  },
                },
              },
              kind: "struct",
            },
          },
          "head" => {
            kind: "option",
            valueType: {
              fields: Map(3) {
                "rotation" => {
                  kind: "option",
                  valueType: {
                    elementType: {
                      kind: "primitive",
                      name: "number",
                    },
                    kind: "array",
                  },
                },
                "scale" => {
                  kind: "option",
                  valueType: {
                    elementType: {
                      kind: "primitive",
                      name: "number",
                    },
                    kind: "array",
                  },
                },
                "translation" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
              },
              kind: "struct",
            },
          },
          "thirdperson_lefthand" => {
            kind: "option",
            valueType: {
              fields: Map(3) {
                "rotation" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
                "scale" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
                "translation" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
              },
              kind: "struct",
            },
          },
          "thirdperson_righthand" => {
            kind: "option",
            valueType: {
              fields: Map(3) {
                "rotation" => {
                  kind: "option",
                  valueType: {
                    elementType: {
                      kind: "primitive",
                      name: "number",
                    },
                    kind: "array",
                  },
                },
                "scale" => {
                  kind: "option",
                  valueType: {
                    elementType: {
                      kind: "primitive",
                      name: "number",
                    },
                    kind: "array",
                  },
                },
                "translation" => {
                  elementType: {
                    kind: "primitive",
                    name: "number",
                  },
                  kind: "array",
                },
              },
              kind: "struct",
            },
          },
        },
        kind: "struct",
      },
    },
    "elements" => {
      kind: "option",
      valueType: {
        elementType: {
          fields: Map(3) {
            "faces" => {
              fields: Map(6) {
                "down" => {
                  kind: "option",
                  valueType: {
                    fields: Map(2) {
                      "texture" => {
                        kind: "primitive",
                        name: "string",
                      },
                      "uv" => {
                        elementType: {
                          kind: "primitive",
                          name: "number",
                        },
                        kind: "array",
                      },
                    },
                    kind: "struct",
                  },
                },
                "east" => {
                  fields: Map(2) {
                    "texture" => {
                      kind: "primitive",
                      name: "string",
                    },
                    "uv" => {
                      elementType: {
                        kind: "primitive",
                        name: "number",
                      },
                      kind: "array",
                    },
                  },
                  kind: "struct",
                },
                "north" => {
                  fields: Map(2) {
                    "texture" => {
                      kind: "primitive",
                      name: "string",
                    },
                    "uv" => {
                      elementType: {
                        kind: "primitive",
                        name: "number",
                      },
                      kind: "array",
                    },
                  },
                  kind: "struct",
                },
                "south" => {
                  fields: Map(2) {
                    "texture" => {
                      kind: "primitive",
                      name: "string",
                    },
                    "uv" => {
                      elementType: {
                        kind: "primitive",
                        name: "number",
                      },
                      kind: "array",
                    },
                  },
                  kind: "struct",
                },
                "up" => {
                  fields: Map(2) {
                    "texture" => {
                      kind: "primitive",
                      name: "string",
                    },
                    "uv" => {
                      elementType: {
                        kind: "primitive",
                        name: "number",
                      },
                      kind: "array",
                    },
                  },
                  kind: "struct",
                },
                "west" => {
                  fields: Map(2) {
                    "texture" => {
                      kind: "primitive",
                      name: "string",
                    },
                    "uv" => {
                      elementType: {
                        kind: "primitive",
                        name: "number",
                      },
                      kind: "array",
                    },
                  },
                  kind: "struct",
                },
              },
              kind: "struct",
            },
            "from" => {
              elementType: {
                kind: "primitive",
                name: "number",
              },
              kind: "array",
            },
            "to" => {
              elementType: {
                kind: "primitive",
                name: "number",
              },
              kind: "array",
            },
          },
          kind: "struct",
        },
        kind: "array",
      },
    },
    "gui_light" => {
      kind: "option",
      valueType: {
        kind: "primitive",
        name: "string",
      },
    },
    "overrides" => {
      kind: "option",
      valueType: {
        elementType: {
          fields: Map(2) {
            "model" => {
              kind: "primitive",
              name: "string",
            },
            "predicate" => {
              fields: Map(15) {
                "angle" => {
                  kind: "option",
                  valueType: {
                    kind: "primitive",
                    name: "number",
                  },
                },
                "blocking" => {
                  kind: "option",
                  valueType: {
                    kind: "primitive",
                    name: "number",
                  },
                },
                "broken" => {
                  kind: "option",
                  valueType: {
                    kind: "primitive",
                    name: "number",
                  },
                },
                "brushing" => {
                  kind: "option",
                  valueType: {
                    kind: "primitive",
                    name: "number",
                  },
                },
                "cast" => {
                  kind: "option",
                  valueType: {
                    kind: "primitive",
                    name: "number",
                  },
                },
                "charged" => {
                  kind: "option",
                  valueType: {
                    kind: "primitive",
                    name: "number",
                  },
                },
                "filled" => {
                  kind: "option",
                  valueType: {
                    kind: "primitive",
                    name: "number",
                  },
                },
                "firework" => {
                  kind: "option",
                  valueType: {
                    kind: "primitive",
                    name: "number",
                  },
                },
                "level" => {
                  kind: "option",
                  valueType: {
                    kind: "primitive",
                    name: "number",
                  },
                },
                "pull" => {
                  kind: "option",
                  valueType: {
                    kind: "primitive",
                    name: "number",
                  },
                },
                "pulling" => {
                  kind: "option",
                  valueType: {
                    kind: "primitive",
                    name: "number",
                  },
                },
                "throwing" => {
                  kind: "option",
                  valueType: {
                    kind: "primitive",
                    name: "number",
                  },
                },
                "time" => {
                  kind: "option",
                  valueType: {
                    kind: "primitive",
                    name: "number",
                  },
                },
                "tooting" => {
                  kind: "option",
                  valueType: {
                    kind: "primitive",
                    name: "number",
                  },
                },
                "trim_type" => {
                  kind: "option",
                  valueType: {
                    kind: "primitive",
                    name: "number",
                  },
                },
              },
              kind: "struct",
            },
          },
          kind: "struct",
        },
        kind: "array",
      },
    },
    "parent" => {
      kind: "option",
      valueType: {
        kind: "primitive",
        name: "string",
      },
    },
    "textures" => {
      kind: "option",
      valueType: {
        fields: Map(5) {
          "layer0" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "layer1" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "layer2" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "particle" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
          "spyglass" => {
            kind: "option",
            valueType: {
              kind: "primitive",
              name: "string",
            },
          },
        },
        kind: "struct",
      },
    },
  },
  kind: "struct",
}
`;

snapshot[`Emit Multiple Files > datapack/blockstates 1`] = `
"pub struct ArrayElement5 {
  model: String,
  uvlock: Option<bool>,
  weight: Option<f64>,
  x: Option<f64>,
  y: Option<f64>,
}
pub struct Struct15 {
  model: String,
  uvlock: Option<bool>,
  x: Option<f64>,
  y: Option<f64>,
}
pub enum Apply3 {
  Array(Vec<ArrayElement5>),
  Struct(Struct15),
}
pub struct TElement29 {
  facing: Option<String>,
  slot_0_occupied: Option<String>,
  slot_1_occupied: Option<String>,
  slot_2_occupied: Option<String>,
  slot_3_occupied: Option<String>,
  slot_4_occupied: Option<String>,
  slot_5_occupied: Option<String>,
}
pub struct TElement66 {
  east: Option<String>,
  north: Option<String>,
  south: Option<String>,
  up: Option<String>,
  west: Option<String>,
}
pub struct T24 {
  age: Option<String>,
  AND: Option<Vec<TElement29>>,
  down: Option<String>,
  east: Option<String>,
  facing: Option<String>,
  flower_amount: Option<String>,
  has_bottle_0: Option<String>,
  has_bottle_1: Option<String>,
  has_bottle_2: Option<String>,
  leaves: Option<String>,
  level: Option<String>,
  north: Option<String>,
  OR: Option<Vec<TElement66>>,
  south: Option<String>,
  up: Option<String>,
  west: Option<String>,
}
pub struct TElement2 {
  apply: Apply3,
  when: Option<T24>,
}
pub struct ArrayElement87 {
  model: String,
  x: Option<f64>,
  y: Option<f64>,
}
pub struct Struct93 {
  model: String,
  uvlock: Option<bool>,
  x: Option<f64>,
  y: Option<f64>,
}
pub enum TEntry85 {
  Array(Vec<ArrayElement87>),
  Struct(Struct93),
}
pub struct Root {
  multipart: Option<Vec<TElement2>>,
  variants: Option<std::collections::HashMap<String, TEntry85>>,
}
"
`;

snapshot[`Emit Multiple Files > datapack/models/block 1`] = `
"pub struct T5 {
  rotation: Vec<f64>,
  scale: Vec<f64>,
  translation: Vec<f64>,
}
pub struct T13 {
  rotation: Vec<f64>,
  scale: Vec<f64>,
  translation: Vec<f64>,
}
pub struct T21 {
  rotation: Vec<f64>,
  scale: Vec<f64>,
  translation: Vec<f64>,
}
pub struct T29 {
  rotation: Vec<f64>,
  scale: Vec<f64>,
  translation: Vec<f64>,
}
pub struct T37 {
  rotation: Vec<f64>,
  scale: Vec<f64>,
  translation: Vec<f64>,
}
pub struct T45 {
  rotation: Option<Vec<f64>>,
  scale: Option<Vec<f64>>,
  translation: Vec<f64>,
}
pub struct T55 {
  rotation: Vec<f64>,
  scale: Vec<f64>,
  translation: Vec<f64>,
}
pub struct T63 {
  rotation: Option<Vec<f64>>,
  scale: Vec<f64>,
  translation: Vec<f64>,
}
pub struct T3 {
  firstperson_lefthand: Option<T5>,
  firstperson_righthand: Option<T13>,
  fixed: Option<T21>,
  ground: Option<T29>,
  gui: Option<T37>,
  head: Option<T45>,
  thirdperson_lefthand: Option<T55>,
  thirdperson_righthand: Option<T63>,
}
pub struct T78 {
  cullface: Option<String>,
  rotation: Option<f64>,
  texture: String,
  tintindex: Option<f64>,
  uv: Option<Vec<f64>>,
}
pub struct T90 {
  cullface: Option<String>,
  rotation: Option<f64>,
  texture: String,
  tintindex: Option<f64>,
  uv: Option<Vec<f64>>,
}
pub struct T102 {
  cullface: Option<String>,
  rotation: Option<f64>,
  texture: String,
  tintindex: Option<f64>,
  uv: Option<Vec<f64>>,
}
pub struct T114 {
  cullface: Option<String>,
  rotation: Option<f64>,
  texture: String,
  tintindex: Option<f64>,
  uv: Option<Vec<f64>>,
}
pub struct T126 {
  cullface: Option<String>,
  rotation: Option<f64>,
  texture: String,
  tintindex: Option<f64>,
  uv: Option<Vec<f64>>,
}
pub struct T138 {
  cullface: Option<String>,
  rotation: Option<f64>,
  texture: String,
  tintindex: Option<f64>,
  uv: Option<Vec<f64>>,
}
pub struct Faces76 {
  down: Option<T78>,
  east: Option<T90>,
  north: Option<T102>,
  south: Option<T114>,
  up: Option<T126>,
  west: Option<T138>,
}
pub struct T154 {
  angle: f64,
  axis: String,
  origin: Vec<f64>,
  rescale: Option<bool>,
}
pub struct TElement73 {
  __comment: Option<String>,
  faces: Faces76,
  from: Vec<f64>,
  name: Option<String>,
  rotation: Option<T154>,
  shade: Option<bool>,
  to: Vec<f64>,
}
pub struct TElement167 {
  children: Vec<f64>,
  color: f64,
  name: String,
  origin: Vec<f64>,
}
pub struct T179 {
  all: Option<String>,
  amethyst: Option<String>,
  back: Option<String>,
  bamboo: Option<String>,
  bar: Option<String>,
  bars: Option<String>,
  base: Option<String>,
  beacon: Option<String>,
  body: Option<String>,
  bottom: Option<String>,
  cactus: Option<String>,
  cactus_top: Option<String>,
  calibrated_side: Option<String>,
  candle: Option<String>,
  cocoa: Option<String>,
  content: Option<String>,
  crop: Option<String>,
  cross: Option<String>,
  dirt: Option<String>,
  down: Option<String>,
  east: Option<String>,
  edge: Option<String>,
  end: Option<String>,
  end_rod: Option<String>,
  eye: Option<String>,
  fan: Option<String>,
  fire: Option<String>,
  flower: Option<String>,
  flowerbed: Option<String>,
  flowerpot: Option<String>,
  front: Option<String>,
  glass: Option<String>,
  glow_lichen: Option<String>,
  hook: Option<String>,
  inner_top: Option<String>,
  inside: Option<String>,
  lantern: Option<String>,
  leaf: Option<String>,
  leg: Option<String>,
  lever: Option<String>,
  line: Option<String>,
  lit: Option<String>,
  lit_log: Option<String>,
  lock: Option<String>,
  log: Option<String>,
  north: Option<String>,
  obsidian: Option<String>,
  overlay: Option<String>,
  pane: Option<String>,
  particle: Option<String>,
  pattern: Option<String>,
  pitcher_bottom: Option<String>,
  pitcher_side: Option<String>,
  pitcher_top: Option<String>,
  pivot: Option<String>,
  plant: Option<String>,
  platform: Option<String>,
  portal: Option<String>,
  post: Option<String>,
  propagule: Option<String>,
  rail: Option<String>,
  round: Option<String>,
  sapling: Option<String>,
  saw: Option<String>,
  sculk_vein: Option<String>,
  side: Option<String>,
  sides: Option<String>,
  slab: Option<String>,
  south: Option<String>,
  stage_1: Option<String>,
  stage_2: Option<String>,
  stage_3_bottom: Option<String>,
  stage_3_top: Option<String>,
  stage_4_bottom: Option<String>,
  stage_4_top: Option<String>,
  stand: Option<String>,
  stem: Option<String>,
  tendrils: Option<String>,
  texture: Option<String>,
  tip: Option<String>,
  top: Option<String>,
  torch: Option<String>,
  tripwire: Option<String>,
  unlit: Option<String>,
  unsticky: Option<String>,
  up: Option<String>,
  upperstem: Option<String>,
  vine: Option<String>,
  wall: Option<String>,
  west: Option<String>,
  wood: Option<String>,
  wool: Option<String>,
}
pub struct Root {
  ambientocclusion: Option<bool>,
  display: Option<T3>,
  elements: Option<Vec<TElement73>>,
  groups: Option<Vec<TElement167>>,
  gui_light: Option<String>,
  parent: Option<String>,
  textures: Option<T179>,
}
"
`;

snapshot[`Emit Multiple Files > datapack/models/item 1`] = `
"pub struct T3 {
  rotation: Vec<f64>,
  scale: Option<Vec<f64>>,
  translation: Vec<f64>,
}
pub struct T12 {
  rotation: Vec<f64>,
  scale: Option<Vec<f64>>,
  translation: Vec<f64>,
}
pub struct T21 {
  rotation: Option<Vec<f64>>,
  scale: Option<Vec<f64>>,
  translation: Option<Vec<f64>>,
}
pub struct T32 {
  rotation: Vec<f64>,
  scale: Option<Vec<f64>>,
  translation: Option<Vec<f64>>,
}
pub struct T42 {
  rotation: Option<Vec<f64>>,
  scale: Option<Vec<f64>>,
  translation: Option<Vec<f64>>,
}
pub struct T53 {
  rotation: Option<Vec<f64>>,
  scale: Option<Vec<f64>>,
  translation: Vec<f64>,
}
pub struct T63 {
  rotation: Vec<f64>,
  scale: Vec<f64>,
  translation: Vec<f64>,
}
pub struct T71 {
  rotation: Option<Vec<f64>>,
  scale: Option<Vec<f64>>,
  translation: Vec<f64>,
}
pub struct T1 {
  firstperson_lefthand: Option<T3>,
  firstperson_righthand: Option<T12>,
  fixed: Option<T21>,
  ground: Option<T32>,
  gui: Option<T42>,
  head: Option<T53>,
  thirdperson_lefthand: Option<T63>,
  thirdperson_righthand: Option<T71>,
}
pub struct T85 {
  texture: String,
  uv: Vec<f64>,
}
pub struct East89 {
  texture: String,
  uv: Vec<f64>,
}
pub struct North93 {
  texture: String,
  uv: Vec<f64>,
}
pub struct South97 {
  texture: String,
  uv: Vec<f64>,
}
pub struct Up101 {
  texture: String,
  uv: Vec<f64>,
}
pub struct West105 {
  texture: String,
  uv: Vec<f64>,
}
pub struct Faces83 {
  down: Option<T85>,
  east: East89,
  north: North93,
  south: South97,
  up: Up101,
  west: West105,
}
pub struct TElement82 {
  faces: Faces83,
  from: Vec<f64>,
  to: Vec<f64>,
}
pub struct Predicate119 {
  angle: Option<f64>,
  blocking: Option<f64>,
  broken: Option<f64>,
  brushing: Option<f64>,
  cast: Option<f64>,
  charged: Option<f64>,
  filled: Option<f64>,
  firework: Option<f64>,
  level: Option<f64>,
  pull: Option<f64>,
  pulling: Option<f64>,
  throwing: Option<f64>,
  time: Option<f64>,
  tooting: Option<f64>,
  trim_type: Option<f64>,
}
pub struct TElement117 {
  model: String,
  predicate: Predicate119,
}
pub struct T153 {
  layer0: Option<String>,
  layer1: Option<String>,
  layer2: Option<String>,
  particle: Option<String>,
  spyglass: Option<String>,
}
pub struct Root {
  display: Option<T1>,
  elements: Option<Vec<TElement82>>,
  gui_light: Option<String>,
  overrides: Option<Vec<TElement117>>,
  parent: Option<String>,
  textures: Option<T153>,
}
"
`;
